--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -14,19 +14,25 @@ on:
 
 env:
     BaseOS: alpine
-    Repository: dublok/base-linux
+    Repository: dublok/${{ github.event.repository.name }}
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest    
+    runs-on: ubuntu-latest
     outputs:
         SHA_SHORT: ${{ steps.fetch-sha.outputs.SHA_SHORT }}
         BRANCH_NAME: ${{ steps.extract-branch-name.outputs.BRANCH_NAME }}
     strategy:
       matrix:
-        platform: [amd64, arm64] # arm64, s390x
+        platform: [amd64, arm64]
 
     steps:
+      - name: Dump GitHub Context
+        run:   echo "$GITHUB_CONTEXT"
+        shell: bash
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+          
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -133,7 +139,7 @@ jobs:
       - name: Generate Push Tags
         run: |
           PUSH_TAGS="${{ env.BaseOS }}-${{ env.SHA_SHORT }},"
-          PUSH_TAGS+="${{ env.BaseOS }}-${GITHUB_REF_NAME},"
+          # PUSH_TAGS+="${{ env.BaseOS }}-${GITHUB_REF_NAME},"
 
           if [[ "${GITHUB_REF_NAME}" == v* ]]; then
             if [[ "${GITHUB_REF_NAME}" =~ ^v([0-9]+) ]]; then
@@ -197,8 +203,8 @@ jobs:
           echo "PUSH_TAGS: $PUSH_TAGS"
           echo "PUSH_TAGS=$PUSH_TAGS" >> $GITHUB_ENV
 
-      - name: Create and push multi-arch manifestX
-        id: create_manifestX
+      - name: Create and push multi-arch manifest
+        id: create_manifest
         run: |
           PUSH_TAGS=${{ env.PUSH_TAGS }}
           IFS=',' read -r -a PUSH_TAG_ARRAY <<< "$PUSH_TAGS"
@@ -221,9 +227,10 @@ jobs:
         id: sbom_tag_prep
         run: |
           PUSH_TAGS=${{ env.PUSH_TAGS }}
+          IFS=',' read -r -a TAG_ARRAY <<< "$PUSH_TAGS"
+
           SBOM_TAGS=""
 
-          IFS=',' read -r -a TAG_ARRAY <<< "$PUSH_TAGS"
           for PUSH_TAG in "${TAG_ARRAY[@]}"; do
             SBOM_TAGS+="${{ env.Repository }}:$PUSH_TAG,"
           done
@@ -242,144 +249,56 @@ jobs:
           sbom_file_prefix: ""
           sbom_file_suffix: ""
           sbom_file_name: "[TAG]"
-          
-  #     - name: Create and push multi-arch manifest
-  #       id: create_manifest
-  #       run: |
-  #         TAGS=${{ env.TAGS }}
-  #         IFS=',' read -r -a TAG_ARRAY <<< "$TAGS"
-  #         IMAGETOOLS_CMD="docker buildx imagetools create --tag ${{ env.Repository }}:${{ env.BaseOS }}-${{ env.SHA_SHORT }} --tag ${{ env.Repository }}:${{ env.BaseOS }}-${GITHUB_REF_NAME} "
-          
-  #         IMAGE_LIST="${{ env.Repository }}:${{ env.BaseOS }}-${{ env.SHA_SHORT }},${{ env.Repository }}:${{ env.BaseOS }}-${GITHUB_REF_NAME}"
-          
-  #         if [[ "${GITHUB_REF_NAME}" == v* ]]; then
-  #           if [[ "${GITHUB_REF_NAME}" =~ ^v([0-9]+) ]]; then
-  #             MAJOR_VERSION="v${BASH_REMATCH[1]}"
-              
-  #             # Extract additional version components
-  #             VERSION_REGEX='^v([0-9]+)(\.[0-9]+)?(\.[0-9]+)?(\.[0-9]+)?([aA-zZ])?$'
-  #             if [[ "${GITHUB_REF_NAME}" =~ $VERSION_REGEX ]]; then
-  #               MAJOR_MINOR_VERSION="v${BASH_REMATCH[1]}${BASH_REMATCH[2]}"
-  #               MAJOR_MINOR_PATCH_VERSION="v${BASH_REMATCH[1]}${BASH_REMATCH[2]}${BASH_REMATCH[3]}"
-  #               FULL_VERSION="v${BASH_REMATCH[1]}${BASH_REMATCH[2]}${BASH_REMATCH[3]}${BASH_REMATCH[4]}"
-                
-  #               if [[ -n "${BASH_REMATCH[5]}" ]]; then
-  #                 SUFFIX="${BASH_REMATCH[5]}"
-  #                 FULL_VERSION_WITH_SUFFIX="${FULL_VERSION}${SUFFIX}"
-  #               else
-  #                 SUFFIX=""
-  #                 FULL_VERSION_WITH_SUFFIX="${FULL_VERSION}"
-  #               fi
-  #             fi
-              
-  #             if [[ "${SUFFIX}" =~ [aA] ]]; then
-  #               if [[ -n "$FULL_VERSION" ]]; then
-  #                 IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${FULL_VERSION}-alpha "
-  #                 IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${FULL_VERSION}-alpha"
-  #               fi
-  #               if [[ -n "$MAJOR_MINOR_PATCH_VERSION" ]]; then
-  #                 IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_PATCH_VERSION}-alpha "
-  #                 IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_PATCH_VERSION}-alpha"
-  #               fi
-  #               if [[ -n "$MAJOR_MINOR_VERSION" ]]; then
-  #                 IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_VERSION}-alpha "
-  #                 IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_VERSION}-alpha"
-  #               fi
-  #               IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_VERSION}-alpha "
-  #               IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-alpha "
-  #               IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_VERSION}-alpha"
-  #               IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-alpha"
-  #             elif [[ "${SUFFIX}" =~ [bB] ]]; then
-  #               if [[ -n "$FULL_VERSION" ]]; then
-  #                 IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${FULL_VERSION}-beta "
-  #                 IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${FULL_VERSION}-beta"
-  #               fi
-  #               if [[ -n "$MAJOR_MINOR_PATCH_VERSION" ]]; then
-  #                 IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_PATCH_VERSION}-beta "
-  #                 IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_PATCH_VERSION}-beta"
-  #               fi
-  #               if [[ -n "$MAJOR_MINOR_VERSION" ]]; then
-  #                 IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_VERSION}-beta "
-  #                 IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_VERSION}-beta"
-  #               fi
-  #               IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_VERSION}-beta "
-  #               IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-beta "
-  #               IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_VERSION}-beta"
-  #               IMAGE_LIST+=",${{ env.Repository }}:beta"
-  #             else
-  #               if [[ -n "$FULL_VERSION" ]]; then
-  #                 IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${FULL_VERSION} "
-  #                 IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${FULL_VERSION}"
-  #               fi
-  #               if [[ -n "$MAJOR_MINOR_PATCH_VERSION" ]]; then
-  #                 IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_PATCH_VERSION} "
-  #                 IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_PATCH_VERSION}"
-  #               fi
-  #               if [[ -n "$MAJOR_MINOR_VERSION" ]]; then
-  #                 IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_VERSION} "
-  #                 IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_VERSION}"
-  #               fi
-  #               IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_VERSION} "
-  #               IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-latest "
-  #               IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }} "
-  #               IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_VERSION}"
-  #               IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-latest"
-  #               IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}"
-  #             fi
-  #           fi
-  #         fi
-          
-  #         for TAG in "${TAG_ARRAY[@]}"; do
-  #           IMAGETOOLS_CMD+="${{ env.Repository }}:$TAG "
-  #         done
-          
-  #         echo "IMAGE_LIST=$IMAGE_LIST" >> $GITHUB_ENV
-  #         echo "Running command: $IMAGETOOLS_CMD"
-  #         eval $IMAGETOOLS_CMD
-                
-  # push-github-packages:
-  #   needs: create-and-push-manifest
-  #   runs-on: ubuntu-latest
-  #   env:
-  #       SHA_SHORT: ${{ needs.build-and-push.outputs.SHA_SHORT }}
-  #       BRANCH_NAME: ${{ needs.build-and-push.outputs.BRANCH_NAME }}
-  #   steps:
-  #     - name: Print ENV Variables
-  #       run: |
-  #         echo "SHA_SHORT: ${{ env.SHA_SHORT }}"
-  #         echo "BRANCH_NAME: ${{ env.BRANCH_NAME }}"
-  #         echo "GITHUB_REF_NAME: ${GITHUB_REF_NAME}"
+
+  push-github-packages:
+    needs: create-and-push-manifest
+    runs-on: ubuntu-latest
+    env:
+        SHA_SHORT: ${{ needs.build-and-push.outputs.SHA_SHORT }}
+        BRANCH_NAME: ${{ needs.build-and-push.outputs.BRANCH_NAME }}
+    steps:
+      - name: Print ENV Variables
+        run: |
+          echo "SHA_SHORT: ${{ env.SHA_SHORT }}"
+          echo "BRANCH_NAME: ${{ env.BRANCH_NAME }}"
+          echo "GITHUB_REF_NAME: ${GITHUB_REF_NAME}"
   
-  #     - name: Log in to GitHub Packages
-  #       uses: docker/login-action@v3
-  #       with:
-  #         registry: ghcr.io
-  #         username: ${{ github.actor }}
-  #         password: ${{ secrets.GITHUB_TOKEN }}
-          
+      - name: Log in to GitHub Packages
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}          
 
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v1
-  #       with:
-  #         install: true
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          install: true
 
-  #     - name: Log in to Docker Hub
-  #       run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
     
-  #     - name: Pull Docker image for amd64 and arm64
-  #       run: |        
-  #         TAGS=${{ env.TAGS }}
-  #         IFS=',' read -r -a TAG_ARRAY <<< "$TAGS"
-  #         for TAG in "${TAG_ARRAY[@]}"; do
-  #           docker pull ${{ env.Repository }}:$TAG
-  #         done
-
-  #     - name: Create multi-arch image
-  #       run: |
-  #         docker tag dublok/base-linux:alpine ghcr.io/dockforge/base-linux/base-linux:alpine-amd64
-  #         docker tag dublok/base-linux:alpine ghcr.io/dockforge/base-linux/base-linux:alpine-arm64
-  #         docker buildx create --use
-  #         docker buildx imagetools create \
-  #           ghcr.io/dockforge/base-linux/base-linux:alpine-amd64 \
-  #           ghcr.io/dockforge/base-linux/base-linux:alpine-arm64 \
-  #           --tag ghcr.io/dockforge/base-linux/base-linux:alpine
+      - name: Pull and Create Multi-arch Image
+        run: |
+          TAGS=${{ env.TAGS }}
+          PUSH_TAGS=${{ env.PUSH_TAGS }}
+          IFS=',' read -r -a TAG_ARRAY <<< "$TAGS"
+          IFS=',' read -r -a PUSH_TAG_ARRAY <<< "$PUSH_TAGS"
+          FULL_IMAGE_NAME="ghcr.io/${{ github.repository }}/${{ github.event.repository.name }}"
+          
+          # Create the multi-arch image using buildx
+          BUILDX_CMD="docker buildx build --push --platform linux/amd64,linux/arm64"
+          for TAG in "${TAG_ARRAY[@]}"; do
+            ARCH=$(echo "$TAG" | sed -e 's/.*-//') # Extract the architecture from the tag
+            BUILDX_CMD+=" --tag $FULL_IMAGE_NAME:$TAG"
+            docker pull ${{ env.Repository }}:$TAG
+            docker tag ${{ env.Repository }}:$TAG $FULL_IMAGE_NAME:$TAG
+          done
+          
+          # Append the target tags for the multi-arch image
+          for PUSH_TAG in "${PUSH_TAG_ARRAY[@]}"; do
+            BUILDX_CMD+=" --tag $FULL_IMAGE_NAME:$PUSH_TAG"
+          done
+          
+          # Build and push the multi-arch image
+          eval $BUILDX_CMD
