--- a/.github/workflows/load-workflow.yml
+++ b/.github/workflows/load-workflow.yml
@@ -25,9 +25,11 @@ jobs:
 
       - name: Set Action Path
         id: set-action-path
-        run: echo "action_path=./private-configs/.github/actions/${{ github.event.repository.name }}-action" >> $GITHUB_ENV
+        run: echo "action_path=private-configs/.github/actions/${{ github.event.repository.name }}-action" >> $GITHUB_ENV
 
       - name: Use Composite Action
         run: |
-          echo "Using action path: ${{ env.action_path }}"
-        uses: ${{ env.action_path }}
+          echo "Running composite action from path: ${{ env.action_path }}"
+          cp -R ${{ env.action_path }} /tmp/composite-action
+          cd /tmp/composite-action
+          ./entrypoint.sh
