--- a/.github/workflows/load-workflow.yml
+++ b/.github/workflows/load-workflow.yml
@@ -12,16 +12,14 @@ jobs:
       - name: Set up Git
         run: |
           git config --global url."https://${{ secrets.TOKEN }}@github.com".insteadOf "https://github.com"
-        env:
-          PRIVATE_REPO_TOKEN: ${{ secrets.TOKEN }}
 
       - name: Clone Private Configs
-        run: git clone https://github.com/DublokSoftware/workflows.git private-configs
+        run: git clone https://github.com/${{ secrets.HOUSE }}/workflows.git workflows
         env:
           PRIVATE_REPO_TOKEN: ${{ secrets.TOKEN }}
 
       - name: Debug
-        run: ls -la private-configs/.github/actions
+        run: ls -la workflows/.github/actions
 
       - name: Use Composite Action
-        uses: ./private-configs/.github/actions/base-linux-action
+        uses: ./workflows/.github/actions/base-linux-action
